--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": ">=4.3 <7.0",
+    "npm": ">=1.0.0"
+  }
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AlwaysHungrie/nodejsComments.git"
