--- a/package.json
+++ b/package.json
@@ -21,6 +21,22 @@
   ],
   "author": "dhairyaShah",
   "license": "MIT",
+  "dependencies": {
+    "bcryptjs": "*",
+    "body-parser": "*",
+    "connect-flash": "*",
+    "cookie-parser": "^1.4.1",
+    "express": "*",
+    "express-handlebars": "*",
+    "express-messages": "*",
+    "express-session": "*",
+    "express-validator": "*",
+    "mongodb": "*",
+    "mongoose": "*",
+    "passport": "*",
+    "passport-http": "*",
+    "passport-local": "*"
+  },
   "bugs": {
     "url": "https://github.com/AlwaysHungrie/nodejsComments/issues"
   },
